--- a/DX12_Shadows/DX12_Shadows.vcxproj.filters
+++ b/DX12_Shadows/DX12_Shadows.vcxproj.filters
@@ -59,12 +59,18 @@
     <ClInclude Include="Light.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ShadowMap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Shaders\ShadowsVS.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
     <FxCompile Include="Shaders\ShadowsPS.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="Shaders\ZTest.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
   </ItemGroup>
